# kafka

./: .env.example  Makefile  README.md  docker-compose.yml  init_db_script.sql  pyproject.toml
.github/workflows/: app.yml
assets/materials/: architecture.md  avro.md  classic_queues.md  consume_events.md  consumer_groups.md  create_consumer.md  create_producer.md  create_project.md  create_topic.md  data_structures.md  ecosystem.md  homework.md  json_schema.md  json_schema_consume.md  overview.md  produce_events.md
assets/materials/src/: consumer.py  consumer_avro.py  consumer_json.py  kafka_utils.py  producer.py  producer_avro.py  producer_json.py  temp_data.py
docker/app/consumer/: Dockerfile
docker/app/producer/: Dockerfile
docker/kafka/: init-kafka-broker.sh
docker/tests/consumer/: Dockerfile
docker/tests/producer/: Dockerfile
src/homework/: consumer.py  db.py  exceptions.py  kafka_schemas.py  kafka_utils.py  producer.py
tests/: test_consumer.py  test_producer.py
